feat: added deep link copy button - fixes #1316

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -579,5 +579,6 @@
   "refresh_transactions_hint": "Презареждане/Опресняване на последните транзакции",
   "desktop": "работен плот",
   "success_send_message": "Съобщението е изпратено успешно",
-  "error_send_message": "Хм... изпращането на съобщението не бе успешно поради неизвестни причини."
+  "error_send_message": "Хм... изпращането на съобщението не бе успешно поради неизвестни причини.",
+  "copy_deep_link": "Копиране на връзката за заявка"
 }
