--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -579,5 +579,6 @@
   "refresh_transactions_hint": "Επαναφόρτωση/Ανανέωση των τελευταίων συναλλαγών",
   "desktop": "Επιφάνεια εργασίας",
   "success_send_message": "το μήνυμα εστάλη επιτυχώς",
-  "error_send_message": "Χμ... η αποστολή του μηνύματος απέτυχε για άγνωστους λόγους."
+  "error_send_message": "Χμ... η αποστολή του μηνύματος απέτυχε για άγνωστους λόγους.",
+  "copy_deep_link": "Σύνδεσμος αιτήματος αντιγραφής"
 }
