--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -579,5 +579,6 @@
   "refresh_transactions_hint": "नवीनतम लेनदेन को रीलोड/रिफ्रेश करें",
   "desktop": "डेस्कटॉप",
   "success_send_message": "संदेश सफलतापूर्वक भेजा जा चुका है",
-  "error_send_message": "हम्म... कुछ अज्ञात कारणों से संदेश भेजना विफल रहा."
+  "error_send_message": "हम्म... कुछ अज्ञात कारणों से संदेश भेजना विफल रहा.",
+  "copy_deep_link": "कॉपी रिक्वेस्ट लिंक"
 }
