--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -579,5 +579,6 @@
   "refresh_transactions_hint": "Перезагрузить/обновить последние транзакции",
   "desktop": "Рабочий стол",
   "success_send_message": "Сообщение успешно отправлено",
-  "error_send_message": "Хм... отправка сообщения не удалась по неизвестным причинам."
+  "error_send_message": "Хм... отправка сообщения не удалась по неизвестным причинам.",
+  "copy_deep_link": "Скопировать ссылку запроса"
 }
