--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -579,5 +579,6 @@
   "refresh_transactions_hint": "Поново учитај/освежи најновије трансакције",
   "desktop": "Десктоп",
   "success_send_message": "Порука је послата",
-  "error_send_message": "Хмм... слање поруке није успело из непознатих разлога."
+  "error_send_message": "Хмм... слање поруке није успело из непознатих разлога.",
+  "copy_deep_link": "Копирај везу захтева"
 }
