--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -579,5 +579,6 @@
   "refresh_transactions_hint": "Перезавантажити/оновити останні транзакції",
   "desktop": "Робочий стіл",
   "success_send_message": "Повідомлення успішно надіслано",
-  "error_send_message": "Хм... не вдалося надіслати повідомлення з невідомих причин."
+  "error_send_message": "Хм... не вдалося надіслати повідомлення з невідомих причин.",
+  "copy_deep_link": "Копіювати посилання на запит"
 }
