--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -579,5 +579,6 @@
   "refresh_transactions_hint": "Recarregar/atualizar últimas transações",
   "desktop": "Área de Trabalho",
   "success_send_message": "mensagem enviada com sucesso",
-  "error_send_message": "Hmm... o envio da mensagem falhou por alguns motivos desconhecidos."
+  "error_send_message": "Hmm... o envio da mensagem falhou por alguns motivos desconhecidos.",
+  "copy_deep_link": "Link de solicitação de cópia"
 }
