feat: support token ownership transaction type

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -580,5 +580,7 @@
   "desktop": "работен плот",
   "success_send_message": "Съобщението е изпратено успешно",
   "error_send_message": "Хм... изпращането на съобщението не бе успешно поради неизвестни причини.",
-  "copy_deep_link": "Копиране на връзката за заявка"
+  "copy_deep_link": "Копиране на връзката за заявка",
+  "asset_transfer_multi": "Токен-трансфери",
+  "asset_transfer_ownership": "Прехвърляне на собственост върху токени"
 }
