--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -580,5 +580,7 @@
   "desktop": "Επιφάνεια εργασίας",
   "success_send_message": "το μήνυμα εστάλη επιτυχώς",
   "error_send_message": "Χμ... η αποστολή του μηνύματος απέτυχε για άγνωστους λόγους.",
-  "copy_deep_link": "Σύνδεσμος αιτήματος αντιγραφής"
+  "copy_deep_link": "Σύνδεσμος αιτήματος αντιγραφής",
+  "asset_transfer_multi": "Token-Μεταφορές",
+  "asset_transfer_ownership": "Μεταβίβαση διακριτικής ιδιοκτησίας"
 }
