--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -580,5 +580,7 @@
   "desktop": "Рабочий стол",
   "success_send_message": "Сообщение успешно отправлено",
   "error_send_message": "Хм... отправка сообщения не удалась по неизвестным причинам.",
-  "copy_deep_link": "Скопировать ссылку запроса"
+  "copy_deep_link": "Скопировать ссылку запроса",
+  "asset_transfer_multi": "Токен-переводы",
+  "asset_transfer_ownership": "Передача владения токеном"
 }
