--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -580,5 +580,7 @@
   "desktop": "Робочий стіл",
   "success_send_message": "Повідомлення успішно надіслано",
   "error_send_message": "Хм... не вдалося надіслати повідомлення з невідомих причин.",
-  "copy_deep_link": "Копіювати посилання на запит"
+  "copy_deep_link": "Копіювати посилання на запит",
+  "asset_transfer_multi": "Токен-Трансфери",
+  "asset_transfer_ownership": "Передача права власності на маркер"
 }
