--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -580,5 +580,7 @@
   "desktop": "plocha počítače",
   "success_send_message": "Zpráva úspěšně odeslána",
   "error_send_message": "Hmm... odeslání zprávy se z neznámých důvodů nezdařilo.",
-  "copy_deep_link": "Kopírovat odkaz žádosti"
+  "copy_deep_link": "Kopírovat odkaz žádosti",
+  "asset_transfer_multi": "Převody tokenů",
+  "asset_transfer_ownership": "Převod vlastnictví tokenů"
 }
