--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -12,9 +12,9 @@
   "account_watch": "Importe una cuenta que le gustaría observar únicamente",
   "account_watch_short": "Ver cuenta",
   "accounts": "Cuentas",
-  "actions": "Comportamiento",
+  "actions": "Acciones",
   "activate": "Proteger",
-  "activate_hint": "Organice las palabras de la frase de contraseña en el orden correcto. Al hacerlo, confirma que ha mantenido segura la frase de contraseña. Tenga en cuenta que no podrá controlar su cuenta sin la frase de contraseña.",
+  "activate_hint": "Organice las palabras de la frase de recuperación en el orden correcto. Al hacerlo, confirma que ha mantenido segura la frase de recuperación. Tenga en cuenta que no podrá controlar su cuenta sin la frase de recuperación.",
   "activate_request_successful": "Protección de cuenta solicitada con éxito. Su cuenta estará protegida en unos momentos.",
   "activation_failed": "Falló la protección:",
   "activation_success": "Protección solicitada con éxito. Su cuenta estará protegida en unos momentos.",
@@ -22,12 +22,12 @@
   "add_note_to_self_q": "¿Agregar nota a uno mismo?",
   "add_recipient": "Agregar destinatario",
   "add_recipient_batch": "Agregar varios destinatarios por CSV",
-  "address": "Habla a",
+  "address": "Dirección",
   "advanced": "avanzado",
   "alias": "Alias",
   "alias_assignment": "Asignación de alias",
   "alias_buy": "Compra de alias",
-  "alias_name": "Sobre nombre",
+  "alias_name": "Nombre de alias",
   "alias_sale": "Venta de alias",
   "alias_sale_cancellation": "Cancelación de venta de alias",
   "alias_transfer": "Transferencia de alias",
@@ -36,34 +36,34 @@
   "all_transactions": "Todas las transacciones",
   "amount": "Monto",
   "amount_nqt": "Monto",
-  "application": "Solicitud",
+  "application": "Aplicación",
   "arbitrary_message": "Mensaje",
   "are_you_sure": "¿Está seguro?",
-  "ask_order": "Pedir orden",
-  "ask_order_cancellation": "Solicitar cancelación de pedido",
-  "ask_order_placement": "Solicitar colocación de pedido",
-  "asset": "Simbólico",
-  "asset_decimals": "Decimales simbólicos",
+  "ask_order": "Orden de venta",
+  "ask_order_cancellation": "Solicitar cancelación de orden de venta",
+  "ask_order_placement": "Solicitar colocación de orden de venta",
+  "asset": "Token",
+  "asset_decimals": "Decimales de tokens",
   "asset_issuance": "Emisión de tokens",
   "asset_name": "Nombre del token",
   "asset_transfer": "Transferencia de tokens",
   "assets": "Tokens",
-  "attachment": "Adjunto archivo",
-  "back": "atrás",
+  "attachment": "Adjunto",
+  "back": "Atrás",
   "balance": "Balance",
-  "base_target": "Objetivo base",
-  "bid_order_cancellation": "Cancelación de la orden de oferta",
-  "bid_order_placement": "Colocación de la orden de oferta",
+  "base_target": "Base Target",
+  "bid_order_cancellation": "Cancelación de la orden de compra",
+  "bid_order_placement": "Colocación de la orden de compra",
   "block": "Bloque",
   "block_details": "Detalles del bloque",
   "block_height": "Block Height",
   "block_id": "ID de bloque",
   "block_reward": "Recompensa de bloque",
   "block_signature": "Firma de bloque",
-  "block_timestamp": "Marca de tiempo del bloque",
+  "block_timestamp": "Timestamp del bloque",
   "blocks": "Bloques",
   "blocks_details": "Detalles del bloque",
-  "broadcast": "Transmisión",
+  "broadcast": "Emisión",
   "buy": "Comprar",
   "buyer": "Comprador",
   "cancel": "Cancelar",
@@ -75,18 +75,18 @@
   "click_to_copy_passphrase": "Haga clic aquí para copiar la frase de contraseña en el portapapeles",
   "click_to_refresh": "Haga clic para actualizar",
   "click_words": "Haga clic en las palabras en el orden correcto",
-  "close": "Cerca",
+  "close": "Cerrar",
   "coin_performance": "Rendimiento de monedas",
   "comma": "Coma",
   "comment": "Comentario",
   "complete": "Completo",
-  "confirm_passphrase": "Confirmar contraseña",
+  "confirm_passphrase": "Confirmar frase de recuperacón",
   "confirmations": "Confirmaciones",
   "confirmed": "Confirmado",
   "console": "Consola",
-  "contacting_node": "Contactando Node ...",
+  "contacting_node": "Contactando nodo...",
   "contacts": "Contactos",
-  "copy_account_address": "Copiar dirección",
+  "copy_account_address": "Copiar dirección de cuenta",
   "copy_account_id": "Copiar ID de cuenta",
   "csv_add_recipients": "Agregar destinatario mediante CSV",
   "csv_error_duplicated_recipient": "Destinatario duplicado",
@@ -95,11 +95,11 @@
   "csv_error_max_limit_same_multiout": "Se excedió el límite máximo para la misma cantidad de salida múltiple. El límite es:",
   "csv_error_unreadable_format": "Formato ilegible",
   "current_version": "Versión actual",
-  "dashboard": "Tablero",
-  "dashboard_welcome_title": "¡Bienvenido a Signum! Una vez que esta cuenta tenga transacciones, su historial de saldo aparecerá aquí.",
+  "dashboard": "Dashboard",
+  "dashboard_welcome_title": "¡Bienvenido a Signum! Una vez que esta cuenta tenga transacciones, su historial de balance aparecerá aquí.",
   "data": "Datos",
   "date": "Fecha",
-  "deadline": "Plazo",
+  "deadline": "Deadline",
   "deadline_hours": "Fecha límite (horas)",
   "decimals": "Decimales",
   "decrypt": "Descifrar",
@@ -292,7 +292,7 @@
   "recipient": "Recipiente",
   "recipient_address": "Dirección del receptor",
   "recipient_id": "ID de destinatario",
-  "recipient_no_public_key": "La cuenta del destinatario no tiene una clave pública, lo que significa que nunca ha tenido una transacción saliente. La cuenta tiene un saldo de __burst__ Signa. Verifique la dirección de su destinatario antes de enviar.",
+  "recipient_no_public_key": "La cuenta del destinatario no tiene una clave pública, lo que significa que nunca ha tenido una transacción saliente. La cuenta tiene un balance de __burst__ Signa. Verifique la dirección de su destinatario antes de enviar.",
   "recipients": "Destinatarios",
   "record": "Datos de la cuenta",
   "referenced_transaction_full_hash": "Hash completo de transacción referenciada",
@@ -444,8 +444,8 @@
   "click_to_print": "Haga clic para imprimir",
   "show_whitespaces": "Mostrar espacios en blanco",
   "price_change": "Cambio de precio",
-  "balance_reserved": "Saldo reservado",
-  "tokens_total_balance": "Saldo total estimado de tokens",
+  "balance_reserved": "Balance reservado",
+  "tokens_total_balance": "Balance total estimado de tokens",
   "forged_blocks": "Bloques forjados",
   "reward_income": "Ingresos de recompensa",
   "last_forged_block": "Último bloque forjado",
@@ -550,7 +550,7 @@
   "account_verified": "Cuenta encontrada en la red",
   "error_storage_quota_exceeded": "Se excedió la cuota de almacenamiento del lado del cliente. Intente eliminar una o más cuentas para liberar espacio.",
   "you_own_no_token": "Aún no tienes fichas",
-  "chart_balance_change": "Cambio de saldo durante el período mostrado",
+  "chart_balance_change": "Cambio de balance durante el período mostrado",
   "waiting_for_payment": "A la espera del pago",
   "paid": "Pago registrado",
   "contact_successfully_deleted": "Contacto o contactos eliminados con éxito",
